# ggml

examples/: CMakeLists.txt  utils.cpp  utils.h
examples/codegen/: CMakeLists.txt  common.cpp  common.h  main.cpp  serve.cpp
examples/gpt-j/: main.cpp
